# demo

./: index.html
test-camke/dabing/aa/bb/cc/: app
test-cmake/v1/: CMakeLists.txt
test-cmake/v1/src/: sub.cpp
test-cmake/v2/: CMakeLists.txt
test-cmake/v3/: CMakeLists.txt
test-cmake/v4/: CMakeLists.txt
test-cmake/v5/: CMakeLists.txt
test-cmake/v5/src/: add.cpp
test-cmake/v6/: CMakeLists.txt  test.cpp
