cmake_minimum_required(VERSION 3.0)
project(test)
#set(SRC add.cpp div.cpp main.cpp mult.cpp sub.cpp)
#aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
#set(EXECUTABLE_OUTPUT_PATH /home/code/test-camke/dabing/aa/bb/cc)
include_directories(${PROJECT_SOURCE_DIR}/include)
#set(CMAKE_CXX_STANDARD 11)
# add_executable(app ${SRC})
set(LIBRARY_OUTPUT_PATH /home/code/test-camke/dabing/abcd)
add_library(calc SHARED ${SRC})

