cmake_minimum_required(VERSION 3.0)
project(test)
#set(SRC add.cpp div.cpp main.cpp mult.cpp sub.cpp)
#aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
#set(EXECUTABLE_OUTPUT_PATH /home/code/test-camke/dabing/aa/bb/cc)
include_directories(${PROJECT_SOURCE_DIR}/include)
#set(CMAKE_CXX_STANDARD 11)
# link_libraries(calc)
message("xxxxxxxxxx")
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib2)
add_executable(app ${SRC})
message(STATUS "1111xxxxxxxxxx")
target_link_libraries(app calc)
# message(FATAL_ERROR "111221xxxxxxxxxx")
message(STATUS "331xxxxxxxxxx")

