cmake_minimum_required(VERSION 3.0)
project(test)
#set(SRC add.cpp div.cpp main.cpp mult.cpp sub.cpp)
#aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
message("====================")
message(${SRC})
list(REMOVE_ITEM SRC ${PROJECT_SOURCE_DIR}/src/main.cpp)
message("===================")
message(${SRC})
message("+++++++++++++=======")

#set(EXECUTABLE_OUTPUT_PATH /home/code/test-camke/dabing/aa/bb/cc)
include_directories(${PROJECT_SOURCE_DIR}/include)
#set(CMAKE_CXX_STANDARD 11)
# add_executable(app ${SRC})
set(LIBRARY_OUTPUT_PATH /home/code/test-camke/dabing/abcd)
add_library(calc SHARED ${SRC})
set(tmp ikun basketball rap)
set(tmp1 ${tmp} ${SRC})
message(${tmp})
message(${tmp1})
list(APPEND tmp "爱打篮球" "练习两年半" ${SRC})
message(${tmp})

